# django-htmx-todo

./: README.md  pyproject.toml
configuration/: settings.py  urls.py
templates/: base.html
templates/todos/: create.html  list.html  update.html
todos/: forms.py  models.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
todos/templatetags/: highlight.py
users/migrations/: 0001_initial.py
