[project]
name = "django-htmx-todo"
version = "0.1.0"
description = "Django/HTMX todo app based on rodbv posts"
authors = [
    {name = "Slawa Gladkov",email = "Slawikus@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.4,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
